# bgfx_test

./: .gitmodules  CMakeLists.txt  Makefile  main.cpp
core/: core.cpp  core.h
